# smart-search-vlm

./: .gitignore  README.md  RUNBOOK.md  generate_totp.py  ingest.py  main.py  mm_cli.py  notes_index.py  openclaw_imgsearch.py  pyproject.toml  run_guarded_ingest.sh  search.py  test_qwen3_vl8b_feasibility.py
SmartStackUI/: .gitignore  Package.swift  install_app.sh  local_run.sh
SmartStackUI/Sources/SmartStackUI/: main.swift
mm_stack/: ARCHITECTURE.md  __init__.py  api.py  cache.py  chat.py  clip_embedder.py  compare.py  config.py  db.py  entity_memory.py  evaluation.py  fusion.py  ingestion.py  intent_reranker.py  lancedb_store.py  models.py  ocr.py  preprocess.py  query_planner.py  reembed.py  router.py  search_engine.py  search_types.py  session.py  text_embedder.py  utils.py  vlm_analyzer.py
mm_stack/evaluation/: benchmark_cases.json
tests/: test_intent_ranking.py  test_query_fuzzy_metrics.py  test_query_normalization.py  test_query_planner.py  test_search_rerank.py
