[project]
name = "smart-stack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "lancedb",
    "mlx-vlm",
    "open-clip-torch",
    "pillow",
    "pyobjc-framework-Vision",
    "sentence-transformers",
    "sqlite-utils",
]
